fix horizontal scroll

--- a/app.css
+++ b/app.css
@@ -32,7 +32,7 @@ body {
 
 .title__container {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   top: 0;
   left: 0;
